--- a/css/info/cities.css
+++ b/css/info/cities.css
@@ -110,14 +110,16 @@ tr:nth-child(odd){background-color:  rgba(220,220,220,0.5)}
 tr:nth-child(1){
     background: rgba(0,0,0,0.5);
     color: white;
-    border-bottom: 4px solid #fff;
+    border-bottom: 1px solid #fff;
+
 }
 tr th{
-    border-right: 4px solid #fff;
+    border-right: 1px solid #fff;
     text-align: center;
     font-size: 20px;
     font-weight: bold;
     border-top: 1px solid #fff;
+    padding: 6px;
 }
 tr th:last-child{
     border-right: none;
@@ -129,6 +131,7 @@ tr td{
     color: rgba(0,0,0,0.9);
     font-size: 22px;
     width: 50%;
+    padding: 6px;
 }
 tr td:last-child{
     border-right: none;
