--- a/css/info/register-new-guest.css
+++ b/css/info/register-new-guest.css
@@ -31,3 +31,24 @@ body{
     margin-top: 30px;
     margin-bottom: 50px;
 }
+
+@media only screen and (max-width: 480px) {
+
+    #form .form-title h2 a {
+        font-size: 1.8em;
+        color: white;
+    }
+    #form .submit {
+        text-align: center;
+        /* margin-top: -7px; */
+        padding: 8px 80px;
+        background-color: rgba(0, 0, 0, 0.5);
+        color: white;
+        font-size: 20px;
+        border: 1px solid black;
+        border-radius: 10px;
+        transition: background-color 1s;
+        text-decoration: none;
+    }
+
+}
