--- a/css/info/register-new-guest2.css
+++ b/css/info/register-new-guest2.css
@@ -175,7 +175,7 @@ Select Options and form
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
-        margin-bottom: 50px;
+        margin-bottom: 10px;
         margin-left: 0;
     }
     #form form .form-group input{
@@ -234,7 +234,7 @@ Select Options and form
         margin-left: 100px;
     }
     .options {
-        width: 90%;
+        width: 95%;
         /* text-align: center; */
     }
 
@@ -249,7 +249,7 @@ Select Options and form
         color: white;
     }
     .options {
-        width: 90%;
+        width: 95%;
         /* text-align: center; */
     }
 
@@ -299,6 +299,17 @@ Select Options and form
         text-align: left;
         margin-left: 73px;
     }
+    .options select{
+        width: inherit;
+        text-align: center;
+        padding: 12px;
+        color: white;
+        background: rgba(0,0,0,0.5);
+        border: none;
+        font-size: 12px;
+        text-indent: 35%;
+
+    }
 
 }
 @media only screen and (max-width: 320px){
@@ -342,6 +353,17 @@ Select Options and form
     }
     #nav .second-logo img{
         display: unset;
+    }
+    .options select{
+        width: inherit;
+        text-align: center;
+        padding: 12px;
+        color: white;
+        background: rgba(0,0,0,0.5);
+        border: none;
+        font-size: 15px;
+        text-indent: 35%;
+
     }
 }
 .active{
