--- a/css/info/custom-style.css
+++ b/css/info/custom-style.css
@@ -93,11 +93,17 @@ Media Query for Info
         text-align: left;
         margin-left: 70px;
     }
-    #sections .hotel-info {
-        /* margin-right: 200px; */
-        margin-top: 20px;
+
+
+    #sections .hotel-info{
+        margin-left: 0;
+        margin-right: 0;
+    }
+    #sections .hotel-info h3 {
+        margin-top: 5px;
+        font-size: 1.5em;
+        color: white;
         margin-left: 70px;
-        text-align: left;
     }
 }
 @media only screen and (max-width: 480px){
@@ -106,9 +112,8 @@ Media Query for Info
         margin-left: 0;
     }
     #sections .hotel-info {
-        /* margin-right: 200px; */
-        margin-top: 20px;
-        text-align: center;
+        margin-left: 0;
+        margin-right: 0;
 
     }
     #sections .section-back {
