--- a/css/info/custom-style.css
+++ b/css/info/custom-style.css
@@ -80,6 +80,14 @@ Sections
 Media Query for Info
 ================
 */
+@media  screen and (min-width:770px) and (max-width: 850px){
+    #sections .hotel-info {
+         margin-right: 0px;
+        margin-top: 20px;
+        margin-left: 100px;
+    }
+
+}
 @media only screen and (max-width: 760px){
     #sections .section-back{
 
