--- a/css/info/hotel-guest.css
+++ b/css/info/hotel-guest.css
@@ -122,9 +122,19 @@ Media Query for Info
         margin-left: 0;
     }
     #sections-hotel .hotel-info {
-        /* margin-right: 200px; */
-        margin-top: 20px;
         margin-right: 0;
+        margin-top: 20px;
+    }
+    .hotel-info {
+
+        margin-top: 20px;
+
+        text-align: center;
+
+    }
+    #sections-hotel .section-back {
+        width: 100%;
+        margin-bottom: 30px;
         text-align: center;
     }
 }
@@ -133,15 +143,18 @@ Media Query for Info
         text-align: center;
         margin-left: 0;
     }
-    #sections-hotel .hotel-info {
-        /* margin-right: 200px; */
-        margin-top: 20px;
-        text-align: center;
 
-    }
+        #sections-hotel .hotel-info {
+            margin-right: 0;
+            margin-top: 20px;
+
+            text-align: center;
+            margin-left: -101px;
+        }
     #sections-hotel .section-back {
-        width: 72%;
+        width: 100%;
         margin-bottom: 30px;
         text-align: center;
     }
+
 }
