--- a/css/style.css
+++ b/css/style.css
@@ -751,6 +751,20 @@ Media Quries
         text-decoration: none;
         font-weight: 700;
     }
+    #form .submit {
+        text-align: center;
+
+        padding: 13px 80px;
+        background-color: rgba(0,0,0,0.5);
+        color: white;
+        font-size: 25px;
+        border: none;
+        border-radius: 10px;
+        transition: background-color 0.3s;
+        text-decoration: none;
+        margin-top: 30px;
+        font-weight: 700;
+    }
 
 }
 @media only screen and (max-width: 320px){
