--- a/css/info/hotel-room.css
+++ b/css/info/hotel-room.css
@@ -158,6 +158,14 @@ Select Options
 Media Query for Info
 ================
 */
+@media  screen and (min-width:770px) and (max-width: 850px){
+
+    #sections-hotel .hotel-info {
+        width: 100%;
+        margin-left: 115px;
+        margin-top: 20px;
+    }
+}
 @media only screen and (max-width: 760px){
     #sections-hotel .section-title{
         text-align: center;
