--- a/css/info/cities.css
+++ b/css/info/cities.css
@@ -144,6 +144,14 @@ tr:last-child{
 Media Query for Info
 ================
 */
+@media  screen and (min-width:770px) and (max-width: 850px){
+    #sections-hotel {
+        padding: 50px 10px 0;
+        text-align: left;
+        margin-left: 120px;
+    }
+
+}
 @media only screen and (max-width: 760px){
     #sections-hotel{
         margin-left: 0;
