--- a/css/info/register-new-guest2.css
+++ b/css/info/register-new-guest2.css
@@ -50,6 +50,7 @@ Select Options and form
 .options select{
     width: inherit;
     text-align: center;
+    text-align-last: auto;
     padding: 12px;
     color: white;
     background: rgba(0,0,0,0.5);
