--- a/css/info/business-commitment.css
+++ b/css/info/business-commitment.css
@@ -194,7 +194,8 @@ Media Query for Info
     #sections-hotel .hotel-info {
         /* margin-right: 200px; */
         margin-top: 20px;
-        text-align: center;
+        text-align: left;
+        margin-left: 10px;
 
     }
 
