--- a/css/info/forget-pass.css
+++ b/css/info/forget-pass.css
@@ -197,6 +197,24 @@ Select Options
 Media Query for Info
 ================
 */
+@media  screen and (min-width:770px) and (max-width: 850px){
+    #sections-hotel .hotel-info {
+        text-align: center;
+        /* width: 100%; */
+        margin-left: 0;
+        margin-top: 20px;
+    }
+    #sections-hotel {
+        padding: 50px 10px 0;
+        text-align: center;
+    }
+    #sections-hotel .section-back {
+        width: 100%;
+        /* width: 33%; */
+        margin-bottom: 30px;
+        text-align: center;
+    }
+}
 @media only screen and (max-width: 760px){
     #sections-hotel .section-title{
         text-align: center;
