--- a/css/info/withdraw-profits.css
+++ b/css/info/withdraw-profits.css
@@ -77,8 +77,14 @@ Media Query for Info
 @media  screen and (min-width:770px) and (max-width: 850px){
     #sections-hotel .hotel-info {
         width: 100%;
-        margin-left: 0;
+        margin-left: -240px;
         margin-top: 20px;
+    }
+    #sections-hotel .section-back {
+        /* width: 100%; */
+        width: 50%;
+        margin-bottom: 30px;
+        text-align: left;
     }
 }
 @media only screen and (max-width: 760px){
