--- a/css/info/forget-pass.css
+++ b/css/info/forget-pass.css
@@ -199,9 +199,9 @@ Media Query for Info
 */
 @media  screen and (min-width:770px) and (max-width: 850px){
     #sections-hotel .hotel-info {
-        text-align: center;
-        /* width: 100%; */
-        margin-left: 0;
+        text-align: left;
+        width: 100%;
+        margin-left: 185px;
         margin-top: 20px;
     }
     #sections-hotel {
@@ -209,10 +209,10 @@ Media Query for Info
         text-align: center;
     }
     #sections-hotel .section-back {
-        width: 100%;
-        /* width: 33%; */
+        /* width: 100%; */
+        width: 55%;
         margin-bottom: 30px;
-        text-align: center;
+        text-align: left;
     }
 }
 @media only screen and (max-width: 760px){
