100% of animation part 8

--- a/css/info/hotel-guest.css
+++ b/css/info/hotel-guest.css
@@ -116,6 +116,13 @@ tr{
 Media Query for Info
 ================
 */
+@media screen and (min-width: 770px) and (max-width: 850px){
+    #sections-hotel .hotel-info {
+        width: 100%;
+        margin-left: 115px;
+        margin-top: 31px;
+    }
+}
 @media only screen and (max-width: 760px){
     #sections-hotel .section-title{
         text-align: center;
