--- a/css/info/hotel-room.css
+++ b/css/info/hotel-room.css
@@ -226,4 +226,9 @@ Media Query for Info
         margin-bottom: 30px;
         text-align: center;
     }
+    .hotel-guest {
+        padding: 30px 0;
+        margin: 0 auto;
+        width: 85%;
+    }
 }
