--- a/css/info/hotel-room.css
+++ b/css/info/hotel-room.css
@@ -200,6 +200,11 @@ Media Query for Info
         margin-bottom: 30px;
         text-align: center;
     }
+    .hotel-guest {
+        padding: 30px 0;
+        margin: 0 auto;
+        width: 98%;
+    }
 }
 @media only screen and (max-width: 480px){
     #sections-hotel .section-title{
