100% of animation part 11

--- a/css/info/hotel-room.css
+++ b/css/info/hotel-room.css
@@ -153,6 +153,18 @@ Select Options
     font-size: 15px;
     text-align: center;
 }
+
+/*
+
+table settings
+*/
+.hotel-guest-table{
+    width: 70%;
+    text-align: center;
+    margin: 0 auto;
+    margin-bottom: 30px;
+
+}
 /*
 ================
 Media Query for Info
