--- a/css/info/hotel-room.css
+++ b/css/info/hotel-room.css
@@ -159,7 +159,7 @@ Select Options
 table settings
 */
 .hotel-guest-table{
-    width: 70%;
+    width: 80%;
     text-align: center;
     margin: 0 auto;
     margin-bottom: 30px;
@@ -186,6 +186,13 @@ Media Query for Info
         width: 93%;
         margin-bottom: 30px;
         text-align: left;
+    }
+    .hotel-guest-table{
+        width: 65%;
+        text-align: center;
+        margin: 0 auto;
+        margin-bottom: 30px;
+
     }
 }
 @media only screen and (max-width: 760px){
@@ -215,7 +222,14 @@ Media Query for Info
     .hotel-guest {
         padding: 30px 0;
         margin: 0 auto;
-        width: 75%;
+        width: 90%;
+    }
+    .hotel-guest-table{
+        width: 70%;
+        text-align: center;
+        margin: 0 auto;
+        margin-bottom: 30px;
+
     }
 }
 @media only screen and (max-width: 480px){
@@ -246,6 +260,13 @@ Media Query for Info
     .hotel-guest {
         padding: 30px 0;
         margin: 0 auto;
-        width: 75%;
+        width: 90%;
+    }
+    .hotel-guest-table{
+        width: 70%;
+        text-align: center;
+        margin: 0 auto;
+        margin-bottom: 30px;
+
     }
 }
