--- a/css/info/hotel-room.css
+++ b/css/info/hotel-room.css
@@ -187,6 +187,12 @@ Media Query for Info
         margin-bottom: 30px;
         text-align: left;
     }
+    .hotel-guest-table {
+        width: 90%;
+        text-align: center;
+        margin: 0 auto;
+        margin-bottom: 30px;
+    }
 
 }
 @media only screen and (max-width: 760px){
