--- a/css/info/hotel-room.css
+++ b/css/info/hotel-room.css
@@ -224,6 +224,12 @@ Media Query for Info
         margin: 0 auto;
         width: 90%;
     }
+    .hotel-guest-table {
+        width: 90%;
+        text-align: center;
+        margin: 0 auto;
+        margin-bottom: 30px;
+    }
 
 }
 @media only screen and (max-width: 480px){
