index page in arabic

--- a/css/style-rtl.css
+++ b/css/style-rtl.css
@@ -1,461 +1,37 @@
-*,body{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-size: 14px;
+/*Css for arabic version*/
 
-}
-body{
-    background:url("../img/hero-bg.png") no-repeat center center fixed ;
-    background-size: cover;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
 
-    height: 900px;
-    z-index: 1;
-}
-/*
-====================
- Public css
-====================
-*/
-.container{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    direction: rtl;
-}
-/*
-=================
- Section Wix
-=================
-*/
-#wix{
-    padding: 10px;
-    border-bottom: 2px solid #a0138e;
-    background-color: #eff1f2;
-    z-index: 2;
-}
-#wix .intro {
-    display: flex;
-    flex-wrap: wrap;
-}
-#wix .intro a{
-    text-decoration: none;
-    margin-left: 15px;
-    color: black;
-    padding: 10px 30px;
-    font-size: 1.1em;
-}
-#wix .intro a:nth-child(2){
-    text-decoration: none;
-    margin-left: 15px;
-    color: #a0138e;
-    border: 2px solid #a0138e;
-    border-radius: 30px;
-    transition: background-color,color 2s;
-}
-#wix .intro a:nth-child(2):hover{
-    background-color: #a0138e;
-    color: white;
-}
-
-/*
-================
- Nav
-================
-*/
-#nav{
-    padding: 20px 0;
-    background-color: rgba(255,255,255,0.6);
-    transition: background-color 1s;
-
-}
-#nav .nav-top{
-    display: flex;
-    flex-wrap: wrap;
-    width: 100%;
-    justify-content: space-evenly;
-}
-
-#nav .text-second-logo h2 span{
-    display: block;
-    font-size: 1.3em;
-    text-align: center;
-    margin-top: 5px;
-}
-#nav .text-second-logo p{
-    margin-top: 30px;
-    font-size: 1.1em;
-    font-weight: 600;
-}
-
-#nav .addational-register .btn{
-    margin-top: 40px;
-}
-#nav .addational-register a{
+#nav .addational-register a {
     margin-top: 20px;
-    padding: 10px 30px;
+    padding: 11px 85px;
     border-radius: 5px;
-    background-color: rgba(0,0,0,0.4);
+    background-color: rgba(0,0,0,0.5);
     color: white;
     font-weight: 500;
     font-size: 1.2em;
     text-decoration: none;
-    transition: color 1s ease-in;
+    transition: background-color 0.3s ease-in;
 }
-#nav .addational-register select{
-    margin-top: 20px;
-    padding: 5px 10px;
-    border-radius: 5px;
-    background-color: rgba(0,0,0,0.4);
-    color: white;
-    font-weight: 500;
-    font-size: 1.2em;
-    text-decoration: none;
-    transition: color 1s ease-in;
+#nav-mobile .nav-bottom-mobile ul {
+    text-align: right;
+    margin-right: 40px;
 }
-#nav .addational-register select option{
-    margin-top: 20px;
-    margin-bottom: 20px;
-    padding: 5px 10px;
-    border-radius: 5px;
-    background-color: rgba(0,0,0,0.4);
-    color: white;
-    font-weight: 500;
-    font-size: 1.2em;
-    text-decoration: none;
-    transition: color 1s ease-in;
-}
-#nav .addational-register a:hover{
-    color: #a0138e;
-}
-#nav .addational-register .language{
-    text-align: center;
-}
-#nav .addational-register .sign {
-    text-align: center;
-}
-#nav .addational-register .sign a{
-    padding: 0.5em 4.4em;
-
+#nav-mobile .nav-bottom-mobile ul li {
+    margin-bottom: 30px;
+    transition: background-color 0.3s;
+    margin-right: 100px;
 }
 
-nav.nav-bottom{
-    width: 50%;
-    margin-top: 40px;
-}
-nav.nav-bottom ul{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    width: 100%;
-    border-bottom: 1px solid #000;
-    padding-bottom: 15px;
-}
-nav.nav-bottom ul li{
-    list-style: none;
-
-}
-
-nav.nav-bottom ul li a{
-    text-decoration: none;
-    font-size: 1.1em;
-    color: black;
-    font-weight: 600;
-    padding-top: 15px;
-    border-top: none;
-}
-nav.nav-bottom ul li a:hover{
-    border-top: 2px solid gray;
-}
-
-/*
-===========
- Form
-===========
-*/
-#form{
-    padding: 50px 0;
-    text-align: center;
-}
-#form .form-title{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-start;
-    margin-left: 180px;
-    margin-bottom: 50px;
-}
-#form .form-title h2 a{
-    font-size: 2.2em;
-    color: white;
-}
-#form form .form-group{
-    margin-top: 30px;
-}
-
-
-#form form .form-group input{
-    padding: 1em 20em;
-    border-radius: 5px;
-    color: white;
-    text-align: center;
-    border: none;
-    background-color: rgba(0,0,0,0.7);
-}
-#form form .form-group [type="password"]:-moz-placeholder{
-    font-weight: 500;
-    font-size: 1em;
-    color: white;
-
-}
-#form form .form-group [type="password"]::-moz-placeholder{
-    font-weight: 500;
-    font-size: 1em;
-    color: white;
-
-}
-#form form .form-group [type="password"]::-webkit-input-placeholder{
-    font-weight: 500;
-    font-size: 1em;
-    color: white;
-
-}
-#form form .form-group [type="password"]:-ms-input-placeholder{
-    font-weight: 500;
-    font-size: 1em;
-    color: white;
-}
-#form form .form-group [type="text"]:-moz-placeholder{
-    font-weight: 500;
-    font-size: 1em;
-    color: white;
-
-}
-#form form .form-group [type="text"]::-moz-placeholder{
-    font-weight: 500;
-    font-size: 1em;
-    color: white;
-
-}
-#form form .form-group [type="text"]::-webkit-input-placeholder{
-    font-weight: 500;
-    font-size: 1em;
-    color: white;
-
-}
-#form form .form-group [type="text"]:-ms-input-placeholder{
-    font-weight: 500;
-    font-size: 1em;
-    color: white;
-
-}
-
-
-
-#form button.submit{
-    text-align: center;
-    margin-top: 20px;
-    padding: 40px 80px;
-    background-color: rgba(0,0,0,0.7);
-    color: white;
-    font-size: 30px;
-    border: none;
-    border-radius: 10px;
-    transition: background-color 1s;
-}
-#form button.submit:hover{
-    background-color: rgba(0,0,0,0.9);
-    font-weight: 700;
-    transform: scale(0.8);
-}
-/*
-======================
-Footer
-======================
-
-*/
-
-footer{
-    background-color: #555555;
-    padding: 50px 0;
-    z-index: 3;
-}
-footer .copyright{
-    margin-top: 25px;
-}
-footer .copyright h3 a{
-    color: white;
-    font-size: 1.3em;
-    font-weight: 500;
-    margin-right: 15px;
-}
-/*
-====================
-Mobile Menu
-====================
-*/
-.menu-mobile{
-    position: relative;
-    left: 0;
-    top: -580px;
-    width: 100%;
-}
-.menu-mobile .icon-span{
-    display: none;
-}
-.menu-mobile .nav-bottom{
-    display: none;
-}
-
-/*
-===================
-
-Media Quries
-===================
-*/
-@media only screen and (max-width: 760px){
-    #wix .intro {
-        display: flex;
-        justify-content: center;
-        flex-wrap: wrap;
-    }
-    #wix .intro a{
-        margin-left: 0;
-    }
-    /* Nav Query*/
-    .nav-top .logo{
-        width: 100%;
-        -ms-flex: 100%;
-        flex: 100%;
-        text-align: center;
-        margin-bottom: 15px;
-    }
-    .nav-top .second-logo{
-        width: 100%;
-        -ms-flex: 100%;
-        flex: 100%;
-        text-align: center;
-        margin-bottom: 15px;
-    }
-    .nav-top .text-second-logo{
-        width: 100%;
-        -ms-flex: 100%;
-        flex: 100%;
-        text-align: center;
-    }
-    nav.nav-bottom ul {
-
-        text-align: center;
-
-    }
-    nav.nav-bottom ul li {
-        list-style: none;
-        display: block;
-        width: 100%;
-        margin-top: 25px;
-    }
-    /* Form query*/
-    #form .form-title {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: flex-start;
-        margin-left: 60px;
-        margin-bottom: 50px;
-    }
-    #form form .form-group input{
-        padding: 1em 1em;
-    }
-    /*
-    Footer Query
-    */
-    footer {
-        background-color: #555555;
-        padding: 50px 0;
-        z-index: 3;
-    }
-    footer .copyright {
-        margin-top: 25px;
-        margin-bottom: 25px;
-    }
-    .menu-mobile .icon-span{
-        position: absolute;
-        top: 410px;
-        right: 25px;
-        /* width: 60px; */
-        background-color: rgba(0,0,0,0.2);
-        padding: 15px 15px;
-        cursor: pointer;
-        display: block;
-    }
-    .nav-bottom{
-        display: none;
-    }
-    #nav .addational-register{
-        text-align: center;
-    }
-
-}
-
-@media only screen and (max-width: 480px){
-    #form form .form-group input{
-        padding: 1em 5em;
-    }
-    #form .form-title h2 a {
+@media only screen and (max-width: 760px) {
+    #nav-mobile .addational-register a {
+        margin-top: 20px;
+        padding: 13px 164px;
+        border-radius: 5px;
+        background-color: rgba(0, 0, 0, 0.5);
+        color: white;
+        font-weight: 500;
         font-size: 1.2em;
-        color: white;
+        text-decoration: none;
+        transition: background-color, color 0.3s ease-in;
     }
-    footer .copyright h3 a {
-        color: white;
-        font-size: 0.7em;
-        font-weight: 500;
-        margin-right: 15px;
-    }
-    .menu-mobile .icon-span{
-        position: absolute;
-        top: 410px;
-        right: 25px;
-        /* width: 60px; */
-        background-color: rgba(0,0,0,0.2);
-        padding: 15px 15px;
-        cursor: pointer;
-        display: block;
-    }
-    .nav-bottom{
-        display: none;
-    }
-    #nav .addational-register{
-        text-align: center;
-    }
-
-}
-@media only screen and (max-width: 320px){
-    footer .copyright h3 a {
-        color: white;
-        font-size: 12px;
-        font-weight: 500;
-        margin-right: 15px;
-    }
-    .nav-bottom{
-        display: none;
-    }
-    #nav .addational-register{
-        text-align: center;
-    }
-
-    .menu-mobile .icon-span{
-        position: absolute;
-        top: 410px;
-        right: 25px;
-        /* width: 60px; */
-        background-color: rgba(0,0,0,0.2);
-        padding: 15px 15px;
-        cursor: pointer;
-        display: block;
-    }
-}
-.active{
-    display: block;
-    margin-top: 50px;
 }
