--- a/css/style-rtl.css
+++ b/css/style-rtl.css
@@ -99,4 +99,17 @@
     #nav-mobile .addational-register .sign a {
         padding: 11px 88px;
     }
+    #form .submit {
+        text-align: center;
+        padding: 13px 80px;
+        background-color: rgba(0,0,0,0.5);
+        color: white;
+        font-size: 16px;
+        border: none;
+        border-radius: 10px;
+        transition: background-color 0.3s;
+        text-decoration: none;
+        margin-top: 30px;
+        font-weight: 700;
+    }
 }
