arabic version main page (menu version3)

--- a/css/style-rtl.css
+++ b/css/style-rtl.css
@@ -112,4 +112,11 @@
         margin-top: 30px;
         font-weight: 700;
     }
+    .quote-text p {
+        font-style: italic;
+        font-size: 14px;
+        font-weight: 700;
+        margin-top: 20px;
+        margin-bottom: 20px;
+    }
 }
